--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -17,7 +17,7 @@
             "authenticationType": "API_KEY",
             "apiKeyConfig": {
               "apiKeyExpirationDays": 365,
-              "description": "New"
+              "description": "new"
             }
           },
           "additionalAuthenticationProviders": []
